recover from develop

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather World</title>
     <!-- ======= Styles ====== -->
-    <link rel="stylesheet" href="/source/css/index.css">
-    <link rel="stylesheet" href="./css/search-styles.css">
+    <link rel="stylesheet" href="source/css/index.css">
+    <link rel="stylesheet" href="css/search-styles.css">
     <!-- ======= Favicon ====== -->
     <link rel="shortcut icon" href="./assets/image-icon/weather-logo.svg" type="image/svg+xml">
 </head>
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./index.html">
+                    <a href="index.html">
                         <span class="icon">
                             <ion-icon name="home-outline"></ion-icon>
                         </span>
@@ -36,7 +36,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./source/Page/forecast.html">
+                    <a href="source/page/forecast.html">
                         <span class="icon">
                             <ion-icon name="cloud-outline"></ion-icon>
                         </span>
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./source/Page/analytic.html">
+                    <a href="source/page/analytic.html">
                         <span class="icon">
                             <ion-icon name="analytics-outline"></ion-icon>
                         </span>
@@ -52,7 +52,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./source/Page/location.html">
+                    <a href="source/page/location.html">
                         <span class="icon">
                             <ion-icon name="location-outline"></ion-icon>
                         </span>
@@ -60,23 +60,16 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./source/Page/calendar.html">
+                    <a href="source/page/calendar.html">
                         <span class="icon">
                             <ion-icon name="calendar-outline"></ion-icon>
                         </span>
                         <span class="title">Calendar</span>
                     </a>
                 </li>
+
                 <li>
-                    <a href="./source/Page/post.html">
-                        <span class="icon">
-                            <ion-icon name="add-outline"></ion-icon>
-                        </span>
-                        <span class="title">Create Post</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="./source/Page/add-new-account.html">
+                    <a href="source/page/add-new-account.html">
                         <span class="icon">
                             <ion-icon name="person-add-outline"></ion-icon>
                         </span>
@@ -107,12 +100,12 @@
                         </div>
                     </div>
                     <div class="group-notif-profile">
-                        <a href="./source/Page/notification.html">
+                        <a href="source/page/notification.html">
                             <div class="notification">
                                 <ion-icon name="notifications-outline" id="notification"></ion-icon>
                             </div>
                         </a>
-                        <a href="./source/Page/profile.html">
+                        <a href="source/page/profile.html">
                             <div class="user">
                                 <img id="profile-icon" src="./assets/image-icon/user-profile-icon.svg" alt="user-profile" style="width: 40px; height: 40px;">
                             </div>
